=== Testimonials Widget ===

== Changelog ==

= trunk =
* Add forum responses cheat sheet
* Auto flush URLs if archive or testimonial slugs change
* BUGFIX Respect attribute settings by preventing reset_defaults and importexport activating on front-end
* Convert slug, slugs, and term setting items to lowercase on save
* Correctly delete all testimonials options on delete
* Don't create class instance unless plugin is activated
* Prevent same has_archive and rewrite_slug which causes URL problems
* Remove excess FAQ text
* Remove unused settings and methods
* Remove unused testing settings
* Set version for which admin notice to display

= 2.12.1 =
* BUGFIX Settings memory leak [Sites hosed after update 2.12.0](http://wordpress.org/support/topic/premium-sites-hosed-after-update-2120)
* BUGFIX [importexport settings failure](http://wordpress.org/support/topic/errors-after-updating)
* Change update warning verbiage
* Update FAQ & support links to knowledge base

= 2.12.0 =
* Add file headers to lib/class*
* Add filter testimonials_widget_widget_options to alter displayed widget options
* BUGFIX Correct settings required validation `break 2`
* BUGFIX Non-static method Testimonials_Widget::get_testimonials_html() should not be called statically
* CSS rename testimonialswidget_testimonial(s) to testimonials-widget-testimonial(s)
* Correct static get_testimonials_html, get_testimonials_htmls, widget_options function declaration
* Correct static validators call
* Explain options inheritance
* FEATURE Remove Plugin Data on Deletion? - Delete all Testimonials Widget data and options from database on plugin deletion
* FEATURE Settings export/import
* Refactor out get_quote and get_cite from get_testimonial_html
* Refactor excess settings grab in widget_options
* Remove $blank from testimonials_truncate()
* Remove unused code
* Rename metabox.class.php class-redrokk-metabox-class.php
* Rename settings.testimonials-widget.php class-settings-testimonials-widget.php